# hermes-social-engine

./: .env.example  .gitignore  README.md  pyproject.toml
assets/tiktok_review/: slides.txt
docs/: ACCOUNT_CONNECT_GUIDE.md  AGY_DASHBOARD_REVIEW_2026-07-02.md  ARCHITECTURE.md  DASHBOARD_BUILD_BRIEF_2026-07-02.md  DASHBOARD_MVP.md  FACEBOOK_VIDEO_UPLOAD_RESULT.md  META_PUBLISHING_POLICY.md  META_TIKTOK_CONNECT_PLAN.md  POSTIZ_STUDY.md  POSTIZ_VS_HSE_DECISION_RESEARCH.md  YOUTUBE_3MIN_SCHEDULE_RESULT_2026-07-01.json  YOUTUBE_MULTI_CHANNEL.md  YOUTUBE_SHORTS_HUMAN_METADATA_2026-07-01.json  YOUTUBE_SHORTS_HUMAN_METADATA_NO_INTERNAL_TERMS_2026-07-01.json  YOUTUBE_SHORTS_SCHEDULE_RESULT_2026-07-01.json  index.html  privacy.html  terms.html  tiktok-callback.html  tiktokbL8oz3gVNdtW67wlwzcvc0fzInVYFl0B.txt
src/hse/: accounting.py  cli.py  media.py  models.py  notify.py  scheduler.py  store.py
src/hse/dashboard/: __init__.py  main.py  risk.py
src/hse/dashboard/static/: app.js  index.html  styles.css
src/hse/providers/: __init__.py  meta.py  telegram.py  tiktok.py  youtube.py
tests/: test_store_scheduler.py  test_v02_media_ops.py  test_v03_notify.py  test_v04_telegram_provider.py  test_v05_youtube_provider.py  test_v06_meta_provider.py  test_v07_tiktok_provider.py  test_v08_duplicate_guard.py  test_v09_dashboard.py  test_v10_youtube_multi_account.py
