[project]
name="hermes-social-engine"
version="0.6.0"
requires-python=">=3.11"
dependencies=[
  "google-api-python-client>=2.187.0",
  "google-auth-oauthlib>=1.2.2",
  "google-auth>=2.43.0",
  "requests>=2.32.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
]

[project.scripts]
hse="hse.cli:main"

[build-system]
requires=["setuptools>=68"]
build-backend="setuptools.build_meta"

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools.package-data]
"hse.dashboard" = ["static/*"]

[tool.pytest.ini_options]
testpaths=["tests"]
pythonpath=["src"]
